--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
         server: 185.27.134.11
         username: epiz_32939067
         password: ${{ secrets.ftp_password }}
-        server-dir: htdocs/
+        server-dir: htdocs/origin-gamer/
